--- a/portfolio-app/public/manifest.json
+++ b/portfolio-app/public/manifest.json
@@ -13,6 +13,11 @@
       "sizes": "192x192"
     },
     {
+      "src": "132386304.png",
+      "type": "image/png",
+      "sizes": "132x132"
+    },
+    {
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
